welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if (vuBiscuit =true)
                ^Program:18: error: type mismatch;
 found   : Unit
 required: Boolean
	if (vuBiscuit= false){
                     ^